# cli-system-monitor

./: .gitignore  CMakeLists.txt  README.md  config.json
src/: ResourceMonitor.cpp  ResourceMonitor.hpp  main.cpp
